# WatGNN

./: README.md  pyproject.toml  watgnn.py  watgnn_config.py  watgnn_evaluation.py
Data/WatGNN set/: validation.txt
Data/protein-compound set/: 3drism_50_all_c0.5_dlv_00.txt  3drism_50_all_c1.0_dlv_00.txt  cnn_lig_50_all_c1.0_dlv_00.txt  cnn_lig_50_all_c1.5_dlv_00.txt  cnn_lig_50_all_c2.0_dlv_00.txt  gnn_lig_50_all_c1.0_dlv_00.txt  gnn_lig_50_all_c1.5_dlv_00.txt  gnn_lig_50_all_c2.0_dlv_00.txt
Data/single protein set/cov_plot/: plot_wkgb.py
Data/single protein set/scripts/: targets_cmp  waterRMSD_cmp.sh
Data/single protein set/time/: restime.py~
Dataset/WatGNN set/: test.txt  train.txt
Dataset/WatGNN set/plot/: plot_newset.py
Dataset/protein-compound set/: 3drism_50_all_c1.5_dlv_00.txt  cnn_lig_50_all_c0.5_dlv_00.txt
Dataset/single protein set/scripts/: summary_native.py  waterRMSD.py
Dataset/single protein set/time/: restime.py
Endnote/My EndNote Library.Data/rdb/: csort.MYD  jterms.MYI  pdf_index.MYI  refs.MYD  refs.MYI  refs_ext.MYD  refs_ext.MYI
Endnote/My EndNote Library.Data/tdb/: csort.MYI  jterms.MYI  misc.MYI  pdf_index.MYI  refs_ext.MYD  refs_ext.MYI  terms.MYI
Image/image_1/: 5IAI.py  5IAI_A_bond.bild  5IAI_A_bond_filt.bild  5IAI_A_else.bild  5IAI_A_intra.bild  5IAI_A_intra_filt.bild  5IAI_A_polar.bild  5IAI_edge.py  5IAI_mag.py  xxxxxx.txt
Image/image_7/: 2fwh.py
Image/image_9/: 2ihj.py
Preprint/: 2024-03-22_WatGNN.docx
Preprint/Image/image_1/: 5IAI_A_polar_filt.bild  5IAI_A_probe.bild  bild.py
Preprint/Image/image_7/: 2fwh_AB.py
Program/: watgnn.py  watgnn_evaluation.py  watgnn_features.py  watgnn_input.py  watgnn_models.py  watgnn_visualization.py
watgnn/: watgnn.py  watgnn_input_preprocess.py
watgnn/Dataset/protein-compound set/: 3drism_50_all_c2.0_dlv_00.txt  gnn_lig_50_all_c0.5_dlv_00.txt  summary_gnn.py
watgnn/Preprint/Endnote/: My EndNote Library.enl
watgnn/Preprint/protein-compound set/: plot_final_nres.py
(+13 files in other folders)
